force-app/main/default/objects/Purchase__c/Purchase__c.object-meta.xml
<CustomObject>
    <label>Purchase</label>
    <nameField>
        <label>Purchase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>