force-app/main/default/objects/Purchase__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Purchase Reference</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchases</relationshipLabel>
    <relationshipName>Purchases</relationshipName>
    <type>Lookup</type>
</CustomField>