force-app/main/default/objects/Purchase__c/fields/Actual_Rate_buyed__c.field-meta.xml
<CustomField>
    <fullName>Actual_Rate_buyed__c</fullName>
    <label>Actual Rate buyed</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>