force-app/main/default/objects/Purchase__c/fields/Drive_url__c.field-meta.xml
<CustomField>
    <fullName>Drive_url__c</fullName>
    <label>Drive url</label>
    <type>Url</type>
</CustomField>