force-app/main/default/objects/Purchase__c/fields/Product_image__c.field-meta.xml
<CustomField>
    <fullName>Product_image__c</fullName>
    <formula>IMAGE(  Drive_url__c ,&apos;Image&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product_image</label>
    <type>Text</type>
</CustomField>