force-app/main/default/objects/Purchase__c/fields/Sell_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sell_Rate__c</fullName>
    <description>divya automobiles want to sell rate</description>
    <label>Sell Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>