force-app/main/default/objects/Purchase__c/fields/Total_Amount_Bought__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Bought__c</fullName>
    <formula>Quantity__c  *  Sell_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Bought</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>