force-app/main/default/objects/Purchase__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Product_image__c</columns>
    <columns>Quantity__c</columns>
    <columns>Sell_Rate__c</columns>
    <columns>Total_Amount_Bought__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>